--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script> -->
+  <!-- <script src="sketch.js"></script> -->
   <title>test-json</title>
 </head>
 <body>
